--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="ukryte"><input type="text" id="test" /><input type="text" id="attr_1" /><input type="text" id="numer" /></div>
     </center>
         
-        <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.3.js"></script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-1.8.3.js"></script>
         <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="js/jquery.flipCounter.1.2.js"></script>
         <script type="text/javascript" src="js/memo.js"></script>
